[metadata]
name = ConfigArgParse
version = attr: setuptools_git_versioning.version_from_git
author = Ben Weisburd
description = Drop-in replacement for argparse supporting config files and env vars
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/tbooth/ConfigArgParse
project_urls =
    Bug Tracker = https://github.com/bw2/ConfigArgParse/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX
    Natural Language :: English
keywords = options, argparse, ConfigArgParse, config, environment variables,
           envvars, ENV, environment, optparse, YAML, INI

[options]
packages = find:
python_requires = >=3.6
install_requires =
    PyYAML

test_suite = tests
tests_require =
    PyYAML

# Magic versioning :-)
setup_requires = setuptools-git-versioning>=2.1
include_package_data = True
